--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "dotenv": "^16.0.0",
     "express": "^4.18.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.3.1"
+    "mongoose": "^6.3.1",
+    "node-fetch": "^3.2.4"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
